--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cll-design-system",
   "version": "1.0.0",
   "description": "By Dylan Cameron",
-  "main": "script.js",
+  "main": "package.json",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
