--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/dylanharriscameron/cll-design-system#readme",
   "dependencies": {
+    "copy-button": "^2.0.1",
     "express": "^4.18.2"
   }
 }
