--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "url": "git+https://github.com/dylanharriscameron/cll-design-system.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Dylan Cameron",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/dylanharriscameron/cll-design-system/issues"
